fixed popup height on small desktop screens

--- a/src/components/Popup/styles.module.scss
+++ b/src/components/Popup/styles.module.scss
@@ -35,16 +35,25 @@
         @media (min-width: $screen-sm)
         {
             width:         80%;
-            height:        80%;
+            height:        90%;
             border-radius: 10px;
             overflow-y:    hidden;
+
+            @media (min-height: 900px)
+            {
+                height: 80%;
+            }
         }
 
         @media (min-width: $screen-lg)
         {
             width:         70%;
-            height:        60%;
             border-radius: 10px;
+
+            @media (min-height: 1200px)
+            {
+                height: 60%;
+            }
         }
 
         .closeButton
